removed html few updates

--- a/advanced/Functions.ipynb
+++ b/advanced/Functions.ipynb
@@ -18,9 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def cylinder_volume(radius, height):\n",
@@ -128,10 +126,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "non-keyword arg after keyword arg (<ipython-input-6-ecfac9fa4968>, line 1)",
+     "evalue": "positional argument follows keyword argument (<ipython-input-6-ecfac9fa4968>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-ecfac9fa4968>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    cylinder_volume(radius=5, 10)\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-keyword arg after keyword arg\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-ecfac9fa4968>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    cylinder_volume(radius=5, 10)\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
@@ -149,9 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -192,9 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
@@ -215,11 +209,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.9608269831062459\n",
-      "1 0.9608269831062459\n",
-      "2 0.9608269831062459\n",
-      "3 0.9608269831062459\n",
-      "4 0.9608269831062459\n"
+      "0 0.7309974570030651\n",
+      "1 0.7309974570030651\n",
+      "2 0.7309974570030651\n",
+      "3 0.7309974570030651\n",
+      "4 0.7309974570030651\n"
      ]
     }
    ],
@@ -238,9 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def func(a, b=None):\n",
@@ -258,11 +250,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.5436544202497781\n",
-      "1 0.9288277665522452\n",
-      "2 0.7833522155888228\n",
-      "3 0.5495410143150155\n",
-      "4 0.25094523267497393\n"
+      "0 0.07642879054805496\n",
+      "1 0.04301162723328422\n",
+      "2 0.8594670715301602\n",
+      "3 0.09121023793391547\n",
+      "4 0.09542444450008558\n"
      ]
     }
    ],
@@ -281,9 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def append(a, values = []):\n",
@@ -334,9 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def append(a, values = None):\n",
@@ -396,9 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sumation(values, *, initial = 0):\n",
@@ -459,9 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def func(*args): # this is how you define function with variable number of arguments\n",
@@ -480,9 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def func(*args):\n",
@@ -509,9 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def genericsum(*args):\n",
@@ -564,9 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def joinstrings(*args, seperator = \" \"):\n",
@@ -606,9 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_person(name,**kwargs):\n",
@@ -653,9 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_stats(*args):\n",
@@ -696,9 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def timeseries(*values, **metadata):\n",
@@ -756,9 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def func(x):\n",
@@ -808,9 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "twotimes = func # functions can be aliased to different names"
@@ -866,9 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sum_natural(n):\n",
@@ -967,9 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_adder(x):\n",
@@ -981,9 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "adder5 = make_adder(5)"
@@ -1032,9 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_logger(prefix):\n",
@@ -1046,9 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "info = make_logger(\"[INFO]: \")"
@@ -1057,9 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "warn = make_logger(\"[WARN]: \")"
@@ -1102,9 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "records = [\n",
@@ -1118,9 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def column(index):\n",
@@ -1150,9 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "column1 = column(1)\n",
@@ -1220,9 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compose(f, g):\n",
@@ -1232,9 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "words = \"Lets print longest word in upper case\".split()"
@@ -1303,9 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def longest_word(words):\n",
@@ -1335,9 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def uppercase(w):\n",
@@ -1347,9 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "longest_upper = compose(uppercase, longest_word) # lets compose above to functions"
@@ -1424,9 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def zip_with(f):\n",
@@ -1436,9 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_vector_add = zip_with(lambda x, y: x+y)"
@@ -1467,9 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_multiply_list = zip_with(lambda x,y : x*y)"
@@ -1498,9 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def usual_way_polynomial(coeffs, x):\n",
@@ -1546,9 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "P2 = make_polynomial(1,2,1) # return a polynomial x^2 + 2x + 1"
@@ -1577,9 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fixed_point(f, guess, tollerance=0.00001):\n",
@@ -1655,12 +1583,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add(x,y):\n",
-    "    print(\"add\", x,y)\n",
+    "    #print(\"add\", x,y)\n",
     "    return x+y"
    ]
   },
@@ -1673,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,6 +1611,7 @@
     "\n",
     "def mult(x,y):\n",
     "                #<---print(\"mult\", x, y)\n",
+    "    return x*y\n",
     "\n",
     "def fib(n):\n",
     "                #<---print(\"fib\", n)\n",
@@ -1695,37 +1624,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fib 6\n",
-      "fib 5\n",
-      "fib 4\n",
-      "fib 3\n",
-      "fib 2\n",
-      "fib 1\n",
-      "fib 2\n",
-      "fib 3\n",
-      "fib 2\n",
-      "fib 1\n",
-      "fib 4\n",
-      "fib 3\n",
-      "fib 2\n",
-      "fib 1\n",
-      "fib 2\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "8"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,13 +1657,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def debug(func):\n",
+    "    \n",
     "    def wrapper(*args):\n",
-    "        print(\"DEBUG : === \",func, args)\n",
+    "        print(func.__qualname__, args)\n",
     "        return func(*args)\n",
     "        \n",
     "    return wrapper"
@@ -1763,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1681,7 @@
        "5"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1792,16 +1701,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DEBUG : ===  <function debug.<locals>.wrapper at 0x7f118c5dc158> (2, 3)\n",
-      "DEBUG : ===  <function add at 0x7f118c6c5268> (2, 3)\n"
+      "add (2, 3)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1810,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1819,15 +1737,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DEBUG : ===  <function add at 0x7f118c6c5268> (3, 4)\n"
+      "add (3, 4)\n",
+      "add 3 4\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1843,12 +1772,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "@debug\n",
     "def fib(n):\n",
+    "    \"\"\"\n",
+    "    Computes nth fibonacci number\n",
+    "    \"\"\"\n",
     "    if n in [1,2]:\n",
     "        return 1\n",
     "    else:\n",
@@ -1857,22 +1789,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DEBUG : ===  <function fib at 0x7f118c5acd08> (5,)\n",
-      "DEBUG : ===  <function fib at 0x7f118c5acd08> (4,)\n",
-      "DEBUG : ===  <function fib at 0x7f118c5acd08> (3,)\n",
-      "DEBUG : ===  <function fib at 0x7f118c5acd08> (2,)\n",
-      "DEBUG : ===  <function fib at 0x7f118c5acd08> (1,)\n",
-      "DEBUG : ===  <function fib at 0x7f118c5acd08> (2,)\n",
-      "DEBUG : ===  <function fib at 0x7f118c5acd08> (3,)\n",
-      "DEBUG : ===  <function fib at 0x7f118c5acd08> (2,)\n",
-      "DEBUG : ===  <function fib at 0x7f118c5acd08> (1,)\n"
+      "DEBUG : ===  fib (5,)\n",
+      "DEBUG : ===  fib (4,)\n",
+      "DEBUG : ===  fib (3,)\n",
+      "DEBUG : ===  fib (2,)\n",
+      "DEBUG : ===  fib (1,)\n",
+      "DEBUG : ===  fib (2,)\n",
+      "DEBUG : ===  fib (3,)\n",
+      "DEBUG : ===  fib (2,)\n",
+      "DEBUG : ===  fib (1,)\n"
      ]
     },
     {
@@ -1881,13 +1813,129 @@
        "5"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fib(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function debug.<locals>.wrapper at 0x7f93406ec950>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function wrapper in module __main__:\n",
+      "\n",
+      "wrapper(*args)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(fib)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our wrapper has done well functionaly , but everything is not fine! Aim is that everything including help should work as if original function was called. How do we fix it! Function carries matadata with it , which contains docstring. So there has to be a way to copy metadata as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import wraps\n",
+    "\n",
+    "def debug(func):\n",
+    "    @wraps(func)\n",
+    "    def wrapper(*args):\n",
+    "        print(\"DEBUG : === \",func.__qualname__, args)\n",
+    "        return func(*args)\n",
+    "        \n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@debug\n",
+    "def fib(n):\n",
+    "    \"\"\"\n",
+    "    Computes nth fibonacci number\n",
+    "    \"\"\"\n",
+    "    if n in [1,2]:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fib(n-1) + fib(n-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function fib at 0x7f93406ebbf8>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (fib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function fib in module __main__:\n",
+      "\n",
+      "fib(n)\n",
+      "    Computes nth fibonacci number\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(fib)"
    ]
   },
   {
@@ -1914,7 +1962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
