--- a/advanced/outline.ipynb
+++ b/advanced/outline.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing ###"
+    "### [Testing](https://github.com/vikipedia/python-trainings/blob/master/advanced/testing.ipynb) ###"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Downloading stuff from web ###"
+    "### [Downloading stuff from web](https://github.com/vikipedia/python-trainings/blob/master/advanced/web.ipynb) ###"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Command line applications ###"
+    "### [Command line applications](https://github.com/vikipedia/python-trainings/blob/master/advanced/commands.ipynb) ###"
    ]
   },
   {
