--- a/foundation/Foundation1.ipynb
+++ b/foundation/Foundation1.ipynb
@@ -1244,27 +1244,16 @@
     }
    ],
    "source": [
-    "topten[:2] #take first two elements"
+    "topten[:2] #take first two elements "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 4, 5, 6]"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "topten[3:7]"
+    "#topten[3:7]"
    ]
   },
   {
@@ -1559,22 +1548,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1, 1, 1),)"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "manyobjects[0:1]"
+    "#manyobjects[0:1]"
    ]
   },
   {
@@ -4435,7 +4413,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math     # new variable called math ..now bound to module math"
@@ -4554,7 +4534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
