--- a/advanced/moretopics-outline.ipynb
+++ b/advanced/moretopics-outline.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [Databases and SQLAlchemy]()###"
+    "### [Databases and SQLAlchemy](https://github.com/vikipedia/python-trainings/blob/master/advanced/databases.ipynb)###"
    ]
   },
   {
