added xml and json

--- a/advanced/databases.ipynb
+++ b/advanced/databases.ipynb
@@ -398,7 +398,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "select = users.select()"
@@ -407,7 +409,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "q = select.where(users.c.email==\"alice@wonder.land\")"
@@ -490,7 +494,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "engine = create_engine(\"sqlite:///test.db\",echo=True)\n",
@@ -596,8 +602,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sqlalchemy import Table, Column, Integer, String, MetaData, ForeignKey, create_engine\n",
@@ -606,8 +614,17 @@
     "Base = declarative_base()\n",
     "\n",
     "# connect the engine so that we don't have to worry about it later\n",
-    "Base.metadata.bind = engine \n",
-    "\n",
+    "Base.metadata.bind = engine "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "class User(Base):\n",
     "    __tablename__ = \"users\"\n",
     "    id = Column(Integer, primary_key=True)\n",
@@ -626,12 +643,30 @@
     "    \n",
     "    def __repr__(self):\n",
     "        return \"Post({author},{title})\".format(author=self.author_id, title=self.title)\n",
-    "    \n",
-    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from sqlalchemy.orm import sessionmaker\n",
     "DBSession = sessionmaker(bind=engine)\n",
-    "session = DBSession()\n",
-    "\n",
+    "session = DBSession()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "new_user = User(name=\"anand\",email=\"anand@anandology.com\")\n",
     "session.add(new_user)\n",
     "session.commit()"
@@ -639,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +701,7 @@
        "[User(anand,anand@anandology.com), User(anand,anand@anandology.com)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -695,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -709,6 +744,79 @@
    ],
    "source": [
     "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT users.id AS users_id, users.name AS users_name, users.email AS users_email, posts.id AS posts_id, posts.author_id AS posts_author_id, posts.title AS posts_title, posts.body AS posts_body \n",
+      "FROM users, posts \n",
+      "WHERE users.id = posts.author_id\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(q.filter(User.id==Post.author_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "users.id = posts.author_id\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(User.id == Post.author_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "users.id < posts.author_id\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(User.id<Post.author_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT posts.id AS posts_id, posts.author_id AS posts_author_id, posts.title AS posts_title, posts.body AS posts_body \n",
+      "FROM posts JOIN users ON users.id = posts.author_id\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = session.query(Post)\n",
+    "q2 = q.join(User, User.id==Post.author_id)\n",
+    "print(q2)"
    ]
   },
   {
