--- a/advanced/generators.ipynb
+++ b/advanced/generators.ipynb
@@ -619,27 +619,18 @@
     "** Bonus Problem: ** Write a generator `triangular` that takes a number n as argument and generates sequence of first n triangular numbers. nth triangular number is sum of first n natural numbers.\n",
     "```\n",
     ">>> for t in triangular(5):\n",
-    "...     print(t)\n",
-    "1\n",
-    "3\n",
-    "6\n",
-    "10\n",
-    "15\n",
+    "...     print(t, end=\",\")\n",
+    "1,3,6,10,15,\n",
     "```\n",
     "\n",
-    "** Bonus Problem: **  Write a generator `fib_generator` that takes a number n as argument and generates all fibonacci numbers less than n\n",
+    "** Bonus Problem: **  Remove duplicates from a sequence while\n",
+    "maintaining order. can same function be used to remove duplicate lines from a file?\n",
     "```\n",
-    ">>> for f in fib_generator(40):\n",
-    "...     print(f)\n",
-    "1\n",
-    "2\n",
-    "3\n",
-    "5\n",
-    "8\n",
-    "13\n",
-    "21\n",
-    "34    \n",
-    "```\n"
+    ">>> for item in consumedup([3,5,3,4,5,6,7,8,8,9])\n",
+    "...     print(item, end=\",\")\n",
+    "3,5,4,6,7,8,9\n",
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -679,17 +670,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def fib_generator(n):\n",
-    "    prev,current = 1, 1\n",
-    "    while current < n:\n",
-    "        yield current\n",
-    "        prev, current = current, prev + current"
+    "def consumedup(seq):\n",
+    "    seen = set()\n",
+    "    for item in seq:\n",
+    "        if item not in seen:\n",
+    "            yield item\n",
+    "            seen.add(item)\n",
+    "            "
    ]
   },
   {
@@ -881,7 +874,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def take(n, seq):\n",
